<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
   app:popupTheme="@style/AboutAuthor">

    <item
        android:id="@+id/erase_button"
        android:icon="@android:drawable/ic_menu_delete"
        android:orderInCategory="1"
        android:title="@string/erase"
        android:visible="true"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/save_button"
        android:icon="@android:drawable/ic_menu_save"
        android:orderInCategory="2"
        android:title="@string/save"
        android:visible="true"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/author"
        android:title="@string/about_author"
        android:visible="true"
        app:showAsAction="never" />


</menu>